--- a/main.html
+++ b/main.html
@@ -3,13 +3,14 @@
 <html>
 
 <head>
+	
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
 	
-
+<h1>Welcome to the world of Web development</h1>
 
     <script type="text/javascript" src="./script.js">
 </script>
